[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Asafe Felipe <azapphrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
deltalake = "^0.13.0"
delta-spark = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
